# Shipathon-2

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  request.json  requirements.txt
Outputs/: presentation_20260327T203131Z.pptx  spreadsheet_20260327T183321Z.xlsx
src/: __main__.py  agent_toolset.py  openai_agent.py  openai_agent_executor.py
